@@ -30,7 +30,6 @@
 #include "mh_msg.h"
 #include "mh_math.h"
 #include "mh_crash.h"
-#define extern /* empty */	/* Create a symbol for the inline functions */
 #include "mh_alloc.h"
 
 
